# dify-plugin-axonhub

./: .difyignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  TASKS.md  dify-axonhub-dify-axonhub-glittery-cosmos.md  manifest.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
axonhub/: __init__.py  client.py  dify_compat.py  errors.py  model_mapper.py  model_schema.py  tracing.py
docs/: architecture.md  configuration.md  development.md  installation.md  troubleshooting.md
models/llm/: _position.yaml  axonhub-custom-llm.yaml  claude-opus-4-8-cus.yaml  claude-sonnet-4-6-cus.yaml  deepseek-v4-flash-openclaw.yaml  deepseek-v4-pro-cc.yaml  deepseek-v4-pro-codex.yaml  deepseek-v4-pro-cus.yaml  glm-4-7-cus.yaml  glm-5-2-cc.yaml  glm-5-2-codex.yaml  gpt-5-5-codx.yaml  gpt-5-5-openclaw.yaml  grok-4-20-multi-agent-cus.yaml  kimi-k2-6-cus.yaml  llm.py  minimax-m2-7-cus.yaml
models/rerank/: _position.yaml  axonhub-custom-rerank.yaml  rerank.py
models/text_embedding/: _position.yaml  axonhub-custom-embedding.yaml  qwen3-embedding-8b.yaml  text_embedding.py
provider/: axonhub.py  axonhub.yaml
tests/: test_client.py  test_dify_compat.py  test_embedding.py  test_llm.py  test_model_mapper.py  test_model_schema.py  test_phase_1_skeleton.py  test_provider.py  test_provider_schema.py  test_rerank.py  test_tracing.py
