[project]
name = "dify-plugin-axonhub"
version = "0.1.0"
description = "Dify model provider plugin for AxonHub"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dify-plugin>=0.9.1,<1.0.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
